--- a/src/Styles/reg.css
+++ b/src/Styles/reg.css
@@ -10,7 +10,7 @@
     border: 5px solid rgb(241, 239, 239);
     height: 600px;
     width: 85%;
-    color: rgb(16, 16, 16);
+    color: rgb(4, 4, 146);;
     align-self: center;
     margin: 100px 90px;
     border-radius: 10px;
@@ -28,18 +28,19 @@
       margin: 2px;
       align-items: center;
       color:white;
-      background-color: #F646a0;
+      background-color:rgb(4, 4, 146);;
       height: 595px; 
        
   }
   .wel{
     text-align: center;
-    padding: 200px;
+    padding: 100px 0px;
     font-weight: bold;
   }
   .acc-exist{
     align-items: center;
-    padding-left: 200px;
+    padding-left: 300px;
+    padding-top:100px ;
   
   }
   .btn-2{
@@ -49,7 +50,7 @@
   }
   
   .Create{
-    color: #F646a0;
+    color: #56b6ed;
   }
   
    .col-2{
@@ -59,24 +60,27 @@
       
    }
    .create{
-    padding: 20px 210px;
-    color: #F646a0;
+    padding: 3px 230px;
+    color: rgb(4, 4, 146);;
    }
    .Form{
-    padding:70px 210px;
+    padding: 0px 200px;
    }
   
    .btn-1{
       border: 1px solid black;
-      background-color:#363DA2;
+      background-color:rgb(4, 4, 146);;
       color: white;
       padding: 5px;
    }
+   .btn-2{
+    background-color: rgb(255, 255, 255);
+   }
    .btn-1-login:active{
-    background-color: rgb(206, 200, 200);
+    background-color: rgb(103, 100, 254);
   }
-  .btn-2-login:active{
-    background-color: gray;
+  .btn-2-login:hover{
+    background-color: rgb(239, 220, 220);
   }
     img{
       display: flex;
