--- a/src/Styles/Sdashboard.css
+++ b/src/Styles/Sdashboard.css
@@ -4,6 +4,7 @@
     background-color: rgb(249, 249, 249);
 }
 .row-1-sd{
+    margin-left: 30px;
     width: 60%;
     border: 1px solid rgb(241, 236, 236);
     border-radius: 5px;
@@ -43,14 +44,14 @@ color: white;
 .row-2-sd{
     border: 1px solid white;
     border-radius: 5px;
-    margin:0px 40px;
+    margin:40px 50px;
     padding: 20px;
 }
 .col-1-r2-sd{
     border: 1.5px solid white;
     border-radius: 40px;
     padding: 30px;
-    margin: 10px;
+    margin: 30px;
     text-align: center;
     background-color: white;
 }
@@ -59,7 +60,7 @@ color: white;
     border-radius: 5px;
     text-align: center;
     padding: 30px;
-    margin: 10px;
+    margin: 30px;
     background-color: white
 }
 .col-3-r2-sd{
@@ -67,6 +68,6 @@ color: white;
     border-radius: 5px;
     text-align: center;
     padding: 30px;
-    margin: 10px;
+    margin: 30px;
     background-color: white
 }
