--- a/src/Styles/allnotes.css
+++ b/src/Styles/allnotes.css
@@ -1,15 +1,27 @@
 .allnotes{
     background-color:  rgb(249, 249, 249);
-}
-.col{
-    
-    padding: 30px;
-    margin: 30px;
-    border: 1px solid  rgb(241, 236, 236);
-    background-color: white;
+    height: 100%;
 }
 
-button{
-    font-weight: bold;
-   
+.notes-items{
+    border: 1px solid  rgb(241, 236, 236);
+    margin :30px;
+    padding: 20px;
+    background-color: white;
 }
+.notes-items:active{
+    color: rgb(4, 4, 146) ;
+}
+.view{
+    float: right;
+    border-radius: 3px;
+    padding: 2px;
+ }
+ .button{
+    color: rgb(241, 236, 236);
+    border-radius: 2px;
+ }
+ .view:hover{
+   background-color: rgb(4, 4, 146) ;
+   color: white;
+ }
