--- a/src/Styles/profile.css
+++ b/src/Styles/profile.css
@@ -1,9 +1,14 @@
 
+.profile-title{
+    text-align: center;
+    padding: 10px;
+    font-size: xx-large;
+}
 .profile{
-    padding: 5px;
+    padding: 2px;
     background-color:rgb(249, 249, 249) ;
     width: 100%;
-    align-items: center;
+    align-items: left;
     height: 100vh;
 }
 .profile-items{
@@ -12,15 +17,16 @@
     border: 1px solid  rgb(241, 236, 236);
     border-radius: 5px;
     background-color: white;
-    padding: 100px;
+    padding: 10px;
  
 }
 .profile-items span{
     border: 1px solid rgb(241, 236, 236);
-    margin: 10px;
+    margin: 3px;
    
 }
 .profile-items span:active{
     color: rgb(4, 4, 146) ;
 }
+
 
